added shipping info, returns & exchanges, and track order components with routing; updated navbar and footer links

--- a/shop-sphere/package.json
+++ b/shop-sphere/package.json
@@ -20,14 +20,17 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.5",
     "tslib": "^2.3.0",
-    "twilio": "^5.4.2",
+    "twilio": "^5.4.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
