--- a/shop-sphere/angular.json
+++ b/shop-sphere/angular.json
@@ -24,6 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "./",
             "outputPath": "dist/shop-sphere",
             "index": "src/index.html",
             "browser": "src/main.ts",
